--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -4,6 +4,9 @@
     <string name="app_home">首页</string>
     <string name="app_source">https://chengxue2020.github.io/Cat-ports/main.json</string>
 
+    // 关于界面 //
+    <string name="dia_about">版本：20240823-2345\n更新日志：\n重新起航\n\n本软件只提供聚合展示功能，所有资源来自网上, 软件不参与任何制作, 上传, 储存, 下载等内容. 软件仅供学习参考, 请于安装后24小时内删除。\n\n打包分发请保留出处\nhttps://github.com/CatVodTVOfficial/TVBoxOSC</string>
+
     // Home Page //
     <string name="hm_ok">加载成功</string>
     <string name="hm_notok">加载失败</string>
