--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">TVBox</string>
     <string name="app_home">首页</string>
-    <string name="app_source">https://chengxue2020.github.io/Cat-ports/main.json</string>
+    <string name="app_source">https://chengxue2020.github.io/Cat-ports/pg/jsm.json</string>
 
     // 关于界面 //
     <string name="dia_about">版本：20240823-2345\n更新日志：\n重新起航\n\n本软件只提供聚合展示功能，所有资源来自网上, 软件不参与任何制作, 上传, 储存, 下载等内容. 软件仅供学习参考, 请于安装后24小时内删除。\n\n打包分发请保留出处\nhttps://github.com/CatVodTVOfficial/TVBoxOSC</string>
@@ -65,7 +65,7 @@
     <string name="mn_play_decode">IJK解码</string>
     <string name="mn_search">搜索展示</string>
     <string name="mn_ratio">画面缩放</string>
-    <string name="mn_bgplay">后台</string>
+    <string name="mn_bgplay">后台播放</string>
     <string name="mn_preview">窗口预览</string>
     <string name="mn_webview">嗅探Webview</string>
     <string name="mn_render">渲染方式</string>
