--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_source">https://chengxue2020.github.io/Cat-ports/pg/jsm.json</string>
 
     // 关于界面 //
-    <string name="dia_about">版本：20240909-0844\n更新日志：\n支持弹幕\n支持海阔视界APP里的世界直播投屏\n\n本软件只提供聚合展示功能，所有资源来自网上, 软件不参与任何制作, 上传, 储存, 下载等内容. 软件仅供学习参考, 请于安装后24小时内删除。\n\n打包分发请保留出处\nhttps://github.com/CatVodTVOfficial/TVBoxOSC</string>
+    <string name="dia_about">版本：20240914-1409\n更新日志：\n修复片尾时间设置的问题\n不同集数时间不同按正片设置片尾时间，会导致跳过片尾不正确\n\n本软件只提供聚合展示功能，所有资源来自网上, 软件不参与任何制作, 上传, 储存, 下载等内容. 软件仅供学习参考, 请于安装后24小时内删除。\n\n打包分发请保留出处\nhttps://github.com/CatVodTVOfficial/TVBoxOSC</string>
 
     // Home Page //
     <string name="hm_ok">加载成功</string>
